--- a/main.css
+++ b/main.css
@@ -25,6 +25,7 @@ body{
 h1, h2, h3, h4, h5, h5{
     margin-bottom: 5px;
     margin-top: 0;
+    text-align: center;
 }
 
 ol, ul{
@@ -70,12 +71,36 @@ a:focus{
 }
 
 .hero-text{
-    font-size: 38px;
+    font-size: 86px;
     text-transform: uppercase;
     color: #fff;
-    
+    text-align: center;
+    font-weight: bold;
 }
 
-.hero-nav{
+.hero-nav-item{
     display: inline;
+    color: #fff;
+    font-size: 24px;
+    margin: 0 2px 0 2px;
+    text-transform: uppercase;
 }
+
+/***********************************
+*           Sections
+************************************/
+
+
+section:nth-child(2) {
+    background: #eaeaea;
+    border-bottom: 1px solid inherit;
+    border-top: 1px solid inherit;
+}
+
+section{
+    margin-bottom: 25px;
+}
+
+
+
+
