--- a/main.css
+++ b/main.css
@@ -68,6 +68,7 @@ a:focus{
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    
 }
 
 .hero-text{
@@ -107,6 +108,10 @@ a:focus{
 *           Nav
 ************************************/
 
+.nav{
+    opacity: 0;
+}
+
 .base-nav{
     background-color: rgb(158, 207, 255);
     text-align: center;
@@ -132,11 +137,14 @@ a:focus{
 
 .navbar-fixed-top{
     position: fixed;
+    transition: opacity 1s ease-in;
+    opacity: 1;
     top: 0;
     left: 0;
     z-index: 9999;
     width: 100%;
 }
+
 /***********************************
 *           Sections
 ************************************/
